# ComfyUI-Kie-API

./: .gitignore  LICENSE  README.md  benchmark_upload.py  nodes.py  pyproject.toml
.codex/: instructions.md
_internal/: STATUS.md
config/: kie_key.example.txt
docs/: COMFYUI_NODE_CHEATSHEET.md  COMFY_ORG_CANONICAL_REFERENCES.md  KIE_AI_KLING26MOTION_I2V_SPEC.md  KIE_AI_KLING26_T2V_SPEC.md  KIE_AI_SEEDANCE15PRO_I2V.md  KIE_API_KLING26_I2V_SPEC.md  KIE_API_NANOBANANA_SPEC.md  KIE_API_SEEDANCEV1Pro_FAST_I2V.md  KIE_API_SEEDREAM_45_EDIT_SPEC.md  KIE_API_SEEDREAM_T2I_SPEC.md  KIE_PROMPT_GRID_SPEC.md  MODEL_IMPLEMENTATION_TEMPLATE.md  NEW_NODE_CHECKLIST.md  REPO_RULES.md  TENSOR_IMAGE_CONVERSIONS.md  flux_i2i_plan.md  flux_i2i_status.md  flux_i2i_tasks.md  implementation_plan.md  kie_nanobanana_pro.pin.json  node_from_spec.md
example_workflows/: Kie AI - Kling 3.0 Motion.json  Kie AI Kling 3.json  Kie-AI Suno.json  Kie-AI-Banana-Pro-Grid.json  Kie-AI-Nodes.json  sora2_example.json
examples/: minimal_node_example.py
js/: README.md
kie_api/: audio.py  auth.py  credits.py  flux2_i2i.py  gemini3_pro_llm.py  gpt_image2.py  grid.py  grok_imagine_i2i.py  grok_imagine_i2v.py  grok_imagine_t2i.py  grok_imagine_t2v.py  http.py  images.py  jobs.py  kling25_i2v.py  kling26_i2v.py  kling26_t2v.py  kling26motion_i2v.py  kling3_video.py  kling3motion_i2v.py  log.py  nanobanana.py  prompt_lists.py  results.py  seedance15pro_i2v.py  seedance2_video.py  seedancev1pro_fast_i2v.py  seedream45_edit.py  seedream45_t2i.py  sora2.py  suno_music.py  upload.py  validation.py  video.py
(+47 files in other folders)
